--- a/README.rdoc
+++ b/README.rdoc
@@ -2,6 +2,7 @@
 
 A simplistic remote command launcher over SSH conections
 
+
 == Installing
     
 The latest stable version is published in gemcutter.
@@ -9,11 +10,13 @@ The latest stable version is published in gemcutter.
   gem source --add http://gemcutter.org
   gem install remote_executor
 
+
 == Notes
 
-At the moment the gem have a strong dependency of your local SSH configuration, commonly located at ${HOME}/.ssh/config, this is only a 
-very simple mechanism for keep safe your private data, but this need a ugly configuration with a fake user name in the connection 
+At the moment the gem have a strong dependency of your local SSH configuration, commonly located at ${HOME}/.ssh/config, this is only
+a very simple mechanism for keep safe your private data, but this need a ugly configuration with a fake user name in the connection 
 process. I provide a basic SSH config if your aren´t familiar with this configuration stuff
+
 
 === How to use
 
@@ -21,8 +24,17 @@ An example may be the next. Launch the command 'hostname' over your production f
 directory into the file ${HOME}/.remoteexecutorrc like this:
   
   ---
-  :production:
     - :name: 'myFarm'
+      :environment: 'production'
+      :user: admin
+      :hosts: 
+        - 'myHost1'
+        - 'myHost2'
+        - 'myHost3'
+        - 'myHost4'
+    - :name: 'myFarm'
+      :environment: 'production'
+      :user: admin
       :hosts: 
         - 'myHost1'
         - 'myHost2'
@@ -46,6 +58,7 @@ you need this minimal SSH configuration (${HOME}/.ssh/config) for the example
 with this line: 
 
   remote_executor --system=myFarm --environment=production --command='hostname'
+
   
 === Configuration
 
@@ -54,13 +67,35 @@ The configuration for this gem is divided in 3 levels
 * Via --config command option
 * Via your shell environment with the variable REMOTEEXECUTOR (export REMOTEEXECUTOR="${HOME}/configs/remote_executor_settins.yml")
 * Via your user preferences located in the ${HOME}/.remoteexecutorrc file 
+
    
 == TODO
 
 * Document all this stuff in english... I promise
-* Write some test could be a gread idea xD
+* Write some test could be a gread idea
+* Take decisions about user by hosts or user by farm
 * Pullrequests are welcome... of course
+
   
 == License
 
-Copyright © 2007-2010 Javier Juarez, released under the MIT license.
+Copyright (c) 2010-2030 Javier Juarez Martinezi
+
+Permission is hereby granted, free of charge, to any person obtaining
+a copy of this software and associated documentation files (the
+"Software"), to deal in the Software without restriction, including
+without limitation the rights to use, copy, modify, merge, publish,
+distribute, sublicense, and/or sell copies of the Software, and to
+permit persons to whom the Software is furnished to do so, subject to
+the following conditions:
+
+The above copyright notice and this permission notice shall be
+included in all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
+LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
+OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
+WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
