Tests changed to shoulda and new structure

--- a/README.rdoc
+++ b/README.rdoc
@@ -2,21 +2,18 @@
 
 A simplistic remote command launcher over SSH conections
 
-
 == Installing
     
-The latest stable version is published in gemcutter.
+The latest stable version is published in rubygems.
 
-  gem source --add http://gemcutter.org
+  gem source --add http://rubygems.org
   gem install remote_executor
-
 
 == Notes
 
 At the moment the gem have a strong dependency of your local SSH configuration, commonly located at ${HOME}/.ssh/config, this is only
 a very simple mechanism for keep safe your private data, but this need a ugly configuration with a fake user name in the connection 
 process. I provide a basic SSH config if your aren´t familiar with this configuration stuff
-
 
 === How to use
 
@@ -60,20 +57,10 @@ with this line:
 
   remote_executor --system=myFarmID --command='hostname'
 
-  
-=== Configuration
-
-The configuration for this gem is divided in 3 levels
-
-* Via --config command option
-* Via your shell environment with the variable REMOTEEXECUTOR (export REMOTEEXECUTOR="${HOME}/configs/remote_executor_settins.yml")
-* Via your user preferences located in the ${HOME}/.remoteexecutorrc file 
-
-   
+     
 == TODO
 
 * Document all this stuff in english... I promise
-* Write some test could be a gread idea
 * Take decisions about user by hosts or user by farm
 * Pullrequests are welcome... of course
 
